bundled_metadata/force-app/main/default/objects/Tax_Rate_Calculation__mdt/Tax_Rate_Calculation__mdt.object-meta.xml
<CustomObject>
    <label>Tax Rate Calculation</label>
    <pluralLabel>Tax Rate Calculations</pluralLabel>
</CustomObject>