bundled_metadata/force-app/main/default/objects/Tax_Rate_Calculation__mdt/fields/Condition_Name__c.field-meta.xml
<CustomField>
    <fullName>Condition_Name__c</fullName>
    <label>Condition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>