bundled_metadata/force-app/main/default/objects/Tax_Rate_Calculation__mdt/fields/Condition_Value__c.field-meta.xml
<CustomField>
    <fullName>Condition_Value__c</fullName>
    <label>Condition Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>