bundled_metadata/force-app/main/default/objects/Tax_Rate_Calculation__mdt/fields/Rate_for_Market__c.field-meta.xml
<CustomField>
    <fullName>Rate_for_Market__c</fullName>
    <label>Rate for Market</label>
    <length>255</length>
    <type>Text</type>
</CustomField>